fix heading alignment on full-screen devices

--- a/_sass/_media-queries.scss
+++ b/_sass/_media-queries.scss
@@ -10,6 +10,7 @@
 
   .site-header .site-nav {
     float: right;
+    margin-top: 0;
   }
 
   blockquote {
